--- a/GromacsTopologyWriter/src/main/resources/manifest.json
+++ b/GromacsTopologyWriter/src/main/resources/manifest.json
@@ -12,20 +12,20 @@
     "global": {
       "standard": {
         "length": "nm",
-        "mass": "kg",
+        "mass": "u",
         "time": "ps",
-        "charge": "C",
+        "charge": "e",
         "temperature": "K",
         "energy": "kJ/mol",
-        "force": "kJ/mol/nm"
+        "force": "kJ/mol·nm"
       }
     },
     "atom/atomTypes": {
       "none": {
-        "c1": "amu",
-        "c2": "C",
-        "c3_1": "kJ/mol·nm^6",
-        "c4_1": "kJ/mol·nm^12",
+        "c1": "e",
+        "c2": "u",
+        "c3_1": "kJ·nm^6/mol",
+        "c4_1": "kJ·nm^12/mol",
         "c3": "nm",
         "c4": "kJ/mol"
       }
@@ -33,11 +33,11 @@
     "bond/bondTypes": {
       "1": {
         "c1": "nm",
-        "c2": "kJ/mol/nm^2"
+        "c2": "kJ·nm^-2/mol"
       },
       "2": {
         "c1": "nm",
-        "c2": "kJ/mol/nm^4"
+        "c2": "kJ·nm^-4/mol4"
       },
       "3": {
         "c1": "nm",
@@ -46,16 +46,16 @@
       },
       "4": {
         "c1": "nm",
-        "c2": "kJ/mol/nm^2",
-        "c3": "kJ/mol/nm^3"
+        "c2": "kJ·nm^-2/mol",
+        "c3": "kJ·nm^-3/mol"
       },
       "6": {
         "c1": "nm",
-        "c2": "kJ/mol/nm^2"
+        "c2": "kJ·nm^-2/mol"
       },
       "7": {
         "c1": "nm",
-        "c2": "kJ/mol/nm^2"
+        "c2": "kJ·nm^-2/mol"
       },
       "8": {
         "c2": "kJ/mol"
@@ -67,31 +67,31 @@
         "c1": "nm",
         "c2": "nm",
         "c3": "nm",
-        "c4": "kJ/mol/nm^2"
+        "c4": "kJ·nm^-2/mol"
       }
     },
     "pair/pairTypes": {
       "1": {
-        "c1_1": "kJ/mol·nm^6",
-        "c2_1": "kJ/mol·nm^12",
+        "c1_1": "kJ·nm^6/mol",
+        "c2_1": "kJ·nm^12/mol",
         "c1": "nm",
         "c2": "kJ/mol"
       },
       "2": {
-        "c2": "C",
-        "c3": "C",
-        "c4_1": "kJ/mol·nm^6",
-        "c5_1": "kJ/mol·nm^12",
+        "c2": "e",
+        "c3": "e",
+        "c4_1": "kJ·nm^6/mol",
+        "c5_1": "kJ·nm^12/mol",
         "c4": "nm",
         "c5": "kJ/mol"
       }
     },
     "pairNB": {
       "1": {
-        "c1": "C",
-        "c2": "C",
-        "c3_1": "kJ/mol·nm^6",
-        "c4_1": "kJ/mol·nm^12",
+        "c1": "e",
+        "c2": "e",
+        "c3_1": "kJ·nm^6/mol",
+        "c4_1": "kJ·nm^12/mol",
         "c3": "nm",
         "c4": "kJ/mol"
       }
@@ -99,7 +99,7 @@
     "angle/angleTypes": {
       "1": {
         "c1": "°",
-        "c2": "kJ/mol·rad^2"
+        "c2": "kJ·rad^-2/mol"
       },
       "2": {
         "c1": "°",
@@ -108,27 +108,27 @@
       "3": {
         "c1": "nm",
         "c2": "nm",
-        "c3": "kJ/mol·nm^2"
+        "c3": "kJ·nm^-2/mol"
       },
       "4": {
         "c1": "nm",
         "c2": "nm",
         "c3": "nm",
-        "c4": "kJ/mol·nm^2"
+        "c4": "kJ·nm^-2/mol"
       },
       "5": {
         "c1": "°",
-        "c2": "kJ/mol·rad^2",
+        "c2": "kJ·rad^-2/mol",
         "c3": "nm",
-        "c4": "kJ/mol·nm^2"
+        "c4": "kJ·nm^-2/mol"
       },
       "6": {
         "c1": "°",
-        "c2": "kJ/mol·rad^0",
-        "c3": "kJ/mol·rad^1",
-        "c4": "kJ/mol·rad^2",
-        "c5": "kJ/mol·rad^3",
-        "c6": "kJ/mol·rad^4"
+        "c2": "kJ·rad^-0/mol",
+        "c3": "kJ·rad^-1/mol",
+        "c4": "kJ·rad^-2/mol",
+        "c5": "kJ·rad^-3/mol",
+        "c6": "kJ·rad^-4/mol"
       },
       "8": {
         "c2": "kJ/mol"
@@ -145,7 +145,7 @@
       },
       "2": {
         "c1": "°",
-        "c2": "kJ/mol·rad^2"
+        "c2": "kJ·rad^-2/mol"
       },
       "3": {
         "c1": "kJ/mol",
@@ -194,8 +194,8 @@
     },
     "nonbond_params": {
       "1": {
-        "c1_1": "kJ/mol·nm^6",
-        "c2_1": "kJ/mol·nm^12",
+        "c1_1": "kJ·nm^6/mol",
+        "c2_1": "kJ·nm^12/mol",
         "c1": "nm",
         "c2": "kJ/mol"
       },
@@ -213,21 +213,21 @@
     },
     "positionRestraint": {
       "1": {
-        "c1": "kJ/mol·nm^2",
-        "c2": "kJ/mol·nm^2",
-        "c3": "kJ/mol·nm^2"
+        "c1": "kJ·nm^-2/mol",
+        "c2": "kJ·nm^-2/mol",
+        "c3": "kJ·nm^-2/mol"
       },
       "2": {
         "c1": "nm",
         "c2": "nm",
-        "c3": "kJ/mol·nm^2"
+        "c3": "kJl·nm^-2/mo"
       }
     },
     "distanceRestraint": {
       "1": {
-        "c1": "kJ/mol·nm^2",
-        "c2": "kJ/mol·nm^2",
-        "c3": "kJ/mol·nm^2"
+        "c1": "nm",
+        "c2": "nm",
+        "c3": "nm"
       }
     },
     "dihedralRestraint": {
