--- a/MDConverter/pom.xml
+++ b/MDConverter/pom.xml
@@ -45,13 +45,17 @@
             <artifactId>commons-lang3</artifactId>
         </dependency>
         <dependency>
+            <groupId>joda-time</groupId>
+            <artifactId>joda-time</artifactId>
+        </dependency>
+        <dependency>
             <groupId>commons-io</groupId>
             <artifactId>commons-io</artifactId>
         </dependency>
         <dependency>
             <groupId>org.mdconverter</groupId>
             <artifactId>MDConverterAPI</artifactId>
-            <version>${project.version}</version>
+            <version>0.1</version>
         </dependency>
         <dependency>
             <groupId>org.mockito</groupId>
