small build config change

--- a/MDConverter/src/main/resources/config.properties
+++ b/MDConverter/src/main/resources/config.properties
@@ -3,8 +3,7 @@
 
 #location.reader.topology=${plugin.output.reader.topology}
 #location.writer.topology=${plugin.output.writer.topology}
-
-project.version=${project.version}
+project.version=${converter.version}
 
 
 location.reader.structure=/StructureReader
