--- a/MDConverter/pom.xml
+++ b/MDConverter/pom.xml
@@ -84,6 +84,7 @@
                     </execution>
                 </executions>
                 <configuration>
+                    <finalName>${project.artifactId}-${converter.version}</finalName>
                     <transformers>
                         <transformer
                                 implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
